# lyric-parser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md
.github/workflows/: cmake-multi-platform.yml
catch2/: CMakeLists.txt
examples/: CMakeLists.txt  main.cpp  成全 - 刘若英.lrc  清明雨上-许嵩.lrc
lyric-parser/: CMakeLists.txt  lyricparser.cpp  scopedfile.cpp  textfilehelper.cpp
lyric-parser/include/: lyricparser.h  scopedfile.h  textfilehelper.h
test/: CMakeLists.txt  TestLyricParser.cpp  scopedfile.cpp  scopedfile.h
